HTML-Challenge/style.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

body {
  font-family: sans-serif;
  line-height: 1.4;
}

/* PRODUCT */
.product {
  display: grid;
  grid-template-columns: 250px 280px 280px;
  border: 4px solid black;
  width: 825px;
  margin: 50px auto;
  position: relative;
}

.product-title {
  grid-column: 1 / -1;
  background-color: rgba(223, 223, 223, 0.897);
  text-align: center;
  font-size: 22px;
  text-transform: uppercase;
  padding: 15px 0;
}

/* .container {
  display: flex;
  gap: 30px;
} */

.product-info {
  flex: 1;
  margin-top: 10px;
}

.product-price {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 15px;
}

.product-details {
  flex: 1;
  margin-top: 10px;
}

.price {
  font-size: 24px;
}

.shipping {
  font-size: 12px;
  font-weight: bold;
  text-transform: uppercase;
  color: #777;
}

.sale {
  background-color: #ec2f2f;
  color: #fff;
  font-size: 12px;
  text-transform: uppercase;
  font-weight: bold;
  letter-spacing: 1px;
  padding: 7px 15px;
  display: inline-block;
  position: absolute;
  top: -17px;
  left: -26px;
}

.description {
  margin-bottom: 15px;
}

/* LINK INFO */
.more-info-container {
  margin-bottom: 15px;
}

.more-info {
  margin-bottom: 15px;
}

.more-info:link,
.more-info:visited {
  color: black;
}

.more-info:hover,
more-info:active {
  text-decoration: none;
}

.product-colors {
  display: flex;
  gap: 10px;
}

.color {
  background-color: #000;
  height: 22px;
  width: 22px;
}

.color-blue {
  background-color: #2f6ee2;
}

.color-red {
  background-color: red;
}

.color-yellow {
  background-color: yellow;
}

.color-green {
  background-color: green;
}

.color-brown {
  background-color: brown;
  margin-right: 0;
}

/* PRODUCT DETAILS */
.details-title {
  text-transform: uppercase;
  font-size: 16px;
  margin-bottom: 15px;
}

.details-list {
  list-style: square;
  margin-left: 20px;
  margin-bottom: 10px;
}

li {
  margin-bottom: 5px;
}

li:last-child {
  margin-bottom: 0;
}

/* BUTTON */
.add-cart {
  grid-column: 1 / -1;
  background-color: black;
  border: none;
  color: #fff;
  font-size: 20px;
  text-transform: uppercase;
  cursor: pointer;
  width: 100%;
  padding: 15px;
  border-top: black 4px solid;
}

.add-cart:hover {
  background-color: #fff;
  color: #000;
}

